--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.animation.rigging": "1.2.1",
     "com.unity.cinemachine": "2.10.0",
     "com.unity.collab-proxy": "2.5.1",
     "com.unity.ide.rider": "3.0.28",
@@ -7,6 +8,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.probuilder": "5.2.3",
+    "com.unity.recorder": "4.0.2",
     "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.terrain-tools": "5.0.5",
     "com.unity.test-framework": "1.1.33",
