--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Final Project.sln"
+    "dotnet.defaultSolution": "The-Last-Singal-.sln"
 }
